kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: TerraMours_Gpt_Web
  labels:
    app: TerraMours_Gpt_Web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: TerraMours_Gpt_Web
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: TerraMours_Gpt_Web
    spec:
      containers:
        - image: TerraMours/TerraMours_Gpt_Web
          name: TerraMours_Gpt_Web
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 300m
              memory: 300Mi
